# ChangeLog for sys-apps/systemd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.110 2013/03/31 21:18:56 mgorny Exp $

  31 Mar 2013; Michał Górny <mgorny@gentoo.org> systemd-200.ebuild,
  systemd-9999.ebuild:
  Obtain PAM moduledir from pam.eclass.

  30 Mar 2013; Mike Gilbert <floppym@gentoo.org> systemd-200.ebuild,
  systemd-9999.ebuild:
  Work around bug 463846 by exporting CC.

  30 Mar 2013; Mike Gilbert <floppym@gentoo.org> systemd-200.ebuild,
  systemd-9999.ebuild:
  Copy last two changes from live ebuild.

  30 Mar 2013; Mike Gilbert <floppym@gentoo.org> systemd-9999.ebuild:
  Update hwids version per ssuominen.

  30 Mar 2013; Mike Gilbert <floppym@gentoo.org> systemd-9999.ebuild:
  Move hwids to PDEPEND. Call udevadm to update the hwdb in pkg_postinst. Copied
  from the udev package.

  29 Mar 2013; Michał Górny <mgorny@gentoo.org> -systemd-199.ebuild:
  Drop the unnecessary mid-version.

*systemd-200 (29 Mar 2013)

  29 Mar 2013; Michał Górny <mgorny@gentoo.org> +systemd-200.ebuild,
  systemd-9999.ebuild:
  Move the #ifdefs around a bit and remove double deps from the live ebuild.
  Bump to 200.

  29 Mar 2013; Michał Górny <mgorny@gentoo.org> systemd-9999.ebuild:
  Move udev executables to rootfs to avoid breaking the few systems which
  install systemd but aren't prepared for it. Symlink to the new locations for
  compat.

  28 Mar 2013; Mike Gilbert <floppym@gentoo.org> +files/199-firmware.patch,
  systemd-199.ebuild:
  Add patch to resolve issue with firmware built-in, bug 463604.

*systemd-199 (27 Mar 2013)

  27 Mar 2013; Michał Górny <mgorny@gentoo.org> +systemd-199.ebuild:
  Version bump.

  26 Mar 2013; Michał Górny <mgorny@gentoo.org> systemd-9999.ebuild:
  Move nss_myhostname back to /usr -- it seems that nss handles this well.

  26 Mar 2013; Michał Górny <mgorny@gentoo.org> systemd-9999.ebuild: