@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/systemd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.110 2013/03/31 21:18:56 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.111 2013/04/02 12:28:53 mgorny Exp $
+
+*systemd-200-r1 (02 Apr 2013)
+
+  02 Apr 2013; Michał Górny <mgorny@gentoo.org> +systemd-200-r1.ebuild,
+  -systemd-200.ebuild, systemd-9999.ebuild:
+  Move udevadm temporarily to /bin as that is the official sys-fs/udev location
+  for longer time than I expected.
 
   31 Mar 2013; Michał Górny <mgorny@gentoo.org> systemd-200.ebuild,
   systemd-9999.ebuild:
